--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -232,8 +232,35 @@ When the listeners can compare the model sample with ground truth audio side-by-
 
 In Appendix~\ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet~\citep{jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK}~\citep{yamagishi2019cstr}, and \texttt{LJSpeech}~\citep{Ito2017ljspeech} data.
 
+### 5.2.Unseen Languages & Varied Recording Environments
 
+In this subsection, we assess the universal vocoding capability of BigVGAN by measuring its zero-shot performance for various unseen languages with varied types of the recording environments in the unseen dataset.
+Based on the results in Table \ref{tab:libritts-all}, we only include GAN-based vocoders as the state-of-the-art baseline.
+We gather three classes of a publicly available multi-language dataset categorized by the type of noise from the recording environment.
 
+- A collection of under-resourced languages recorded in a noiseless studio environment \citep{sodimana2018step}: Javanese, Khmer, Nepali, and Sundanese. We use randomly selected 50 audio clips with equal balance across languages from the combined dataset.
+\vspace{-.3em}
+- The Multilingual TEDx Corpus \citep{salesky2021multilingual}: contains a collection of TEDx talks in Spanish, French, Italian, and Portuguese. We use randomly selected 50 audio clips with equal balance across languages from the IWSLT'21 test set. We simulate the unseen recording environment setup by adding a random environmental noise from MS-SNSD \citep{reddy2019scalable}, such as airport, cafe, babble, etc.
+\vspace{-.3em}
+- Deeply Korean read speech corpus \citep{deeply_corpus_kor}: contains short speech audio clips in Korean, recorded in three types of recording environments (anechoic chamber, studio apartment, and dance studio) using a smartphone. 
+We use randomly selected 50 audio clips where 25 clips are from the studio apartment, and the remaining 25 clips are from the dance studio. The collected audio clips contain a significant amount of noise and artifacts from real-world recording environments, such as reverb, echo, and static background noise.
+
+Table \ref{tab:multi-language} summarizes the SMOS results from three different types of unseen dataset. We only did SMOS evaluations, because the datasets have unseen languages for human listeners and it is hard to determine the quality without side-by-side comparison with the ground-truth recordings. 
+For clean under-resourced language dataset, the performance gap between models is not substantially large. This indicates that the universal vocoder trained on the entire LibriTTS training set is robust to unseen languages under clean recording environments.
+For both types of unseen recording environment (simulated or real-world), BigVGAN outperforms the baseline models by a large margin. The small capacity BigVGAN-base also shows improvements compared to the baseline with statistical significance (p-value $<$ 0.05 from the Wilcoxon signed-rank test). This suggests that BigVGAN is significantly more robust to the unseen recording environments thanks to the improved generator design with the AMP module.
+In Appendix~\ref{appendix:asr}, we further demonstrate that BigVGAN is the most linguistically accurate universal vocoder in terms of character error rate (CER) on multiple languages.
+
+We test the open-source implementation of UnivNet~\citep{jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
+Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed HiFi-GAN \citep{kong2020hifi}, we find that the unmodified HiFi-GAN trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
+We also train UnivNet-c32 on LibriTTS \texttt{train-full} and find that it is not benefited from larger training data. See Appendix~\ref{appendix:more-ablations-ljspeech-vctk} for detailed analysis. 
+
+### 5.3.Out-of-Distribution Robustness
+
+In this subsection, we test BigVGAN's robustness and extrapolation capability by measuring zero-shot performance on out-of-distribution data. We conduct the SMOS experiment using MUSDB18-HQ~\citep{musdb18-hq}, a multi-track music audio dataset which contains vocal, drums, bass, other instruments, and the original mixture. The test set contains 50 songs with 5 tracks. We gather the mid-song clip with the duration of 10 seconds for each track and song.
+
+Table~\ref{tab:musdb-hq} shows the SMOS results from the 5 tracks and their average from the MUSDB18-HQ test set. BigVGAN models demonstrate a substantially improved zero-shot generation performance with wider frequency band coverage, whereas baseline models fail to generate audio outside the limited frequency range and suffer from severe distortion. The improvements are most profound for singing voice~(vocal), instrumental audio~(others) and the full mixture of the song~(mixture), whereas the improvements from drums and bass are less significant.
+
+We also experiment with audios obtained from YouTube videos from real-world recording environments. BigVGAN also exhibits robustness to various types of out-of-distribution signals such as laughter. We provide audio samples to our demo page.~\footnote{\small\url{https://bigvgan-demo.github.io}}
 
 ## 6.Conclusions: 结论
 
