--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -262,6 +262,19 @@ Table~\ref{tab:musdb-hq} shows the SMOS results from the 5 tracks and their aver
 
 We also experiment with audios obtained from YouTube videos from real-world recording environments. BigVGAN also exhibits robustness to various types of out-of-distribution signals such as laughter. We provide audio samples to our demo page.~\footnote{\small\url{https://bigvgan-demo.github.io}}
 
+### 5.4.Ablation Study
+
+#### Model architecture
+To measure the effectiveness of the BigVGAN generator, we include SMOS test for the ablation models of BigVGAN-base on MUSDB18-HQ data. Table~\ref{tab:musdb-hq} shows that the ablation models exhibit clear degradation on various  scenarios such as instrumental audio (others, mixture). From the average SMOS ratings, 1) disabling the anti-aliasing filter for \emph{Snake} activation performs worse than BigVGAN-base and 2) removing both the filter and \emph{Snake} activation (i.e., vanilla HiFi-GAN trained with MRD replacing MSD) is even worse than the \emph{Snake}-only ablation model, both with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). This indicates that Leaky ReLU is not robust enough to extrapolate beyond the learned frequency range and the aliasing artifacts degrade the audio quality in challenging setups. The results show that BigVGAN generator demonstrates strong robustness and extrapolation capability to out-of-distribution scenarios because of the seamless integration of periodic inductive bias and anti-aliased feature representation. See Appendix~\ref{appendix:visualization} for the visualization of anti-aliasing effect in BigVGAN.
+
+#### Big model
+
+We compare HiFi-GAN and BigVGAN both with the largest 112M parameters. We train the 112M HiFi-GAN with the same training setting as BigVGAN. We conduct a pairwise test between the two models on the \texttt{mixture} test set of MUSDB18-HQ which is challenging out-of-distribution data. We ask the participants to select a better sounding audio between the samples from the two models. The test shows that 58 $\%$ of the ratings voted to BigVGAN over the large HiFi-GAN and the quality of BigVGAN is greater than the large HiFi-GAN with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). The results further validate the architectural advantage of BigVGAN in large-scale setting. 
+
+#### Large Training data
+
+To verify the importance of using large-scale training data, we trained our BigVGAN using less diverse, clean speech-only dataset with the same training configuration for 1M steps: 1) \texttt{train-clean-360} subset of LibriTTS, or 2) VCTK dataset. Table~\ref{tab:data-ablation} shows that training BigVGAN on less diverse data shows degradation in both objective metrics and the subjective SMOS on the LibriTTS evaluation sets. The result verifies the importance of using diverse training data and demonstrates the effectiveness of BigVGAN on large-scale datasets.
+
 ## 6.Conclusions: 结论
 
 > This study explores the limits of universal neural vocoding with an unprecedented scale of the data, model, and evaluations.
