--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -187,93 +187,91 @@
 
 ### 4.1.Training data
 
-We use LibriTTS \citep{zen2019libritts} dataset with the original sampling rate of 24 kHz for training. Unlike previous studies which only adopted a subset (\texttt{train-clean-100} or \texttt{train-clean-360}) recorded in a clean environment \citep{jang2020universal, jang2021univnet, 
-albadawy2021vocbench}, we use all training data including the subset from diverse recording environments (\texttt{train-full} = \texttt{train-clean-100 + train-clean-360 + train-other-500}), which is unprecedented in the literature. We find that the diversity of the training data is important to achieve the goal towards universal neural vocoding using BigVGAN.~\footnote{The ablation results on training data diversity can be found in Table~\ref{tab:data-ablation}.}
-For OOD experiments, we resample the audio to 24 kHz if necessary using \texttt{kaiser-best} algorithm provided by \texttt{librosa} package.
-
-Conventional STFT parameters are engineered to have a limited frequency band [0, 8] kHz by cutting off the high frequency details for easier modeling. On a contrary, we train all models~(including the baselines) using a frequency range [0, 12] kHz and a 100-band log-mel spectrogram, which is also used in a recent study towards universal vocoding~\citep{jang2021univnet}. We set other STFT parameters as in previous work \citep{kong2020hifi}, with 1024 FFT size, 1024 Hann window, and 256 hop size.
+> We use LibriTTS \citep{zen2019libritts} dataset with the original sampling rate of 24 kHz for training. Unlike previous studies which only adopted a subset (\texttt{train-clean-100} or \texttt{train-clean-360}) recorded in a clean environment \citep{jang2020universal, jang2021univnet, albadawy2021vocbench}, we use all training data including the subset from diverse recording environments (\texttt{train-full} = \texttt{train-clean-100 + train-clean-360 + train-other-500}), which is unprecedented in the literature. We find that the diversity of the training data is important to achieve the goal towards universal neural vocoding using BigVGAN.~\footnote{The ablation results on training data diversity can be found in Table~\ref{tab:data-ablation}.}
+> For OOD experiments, we resample the audio to 24 kHz if necessary using \texttt{kaiser-best} algorithm provided by \texttt{librosa} package.
+>
+> Conventional STFT parameters are engineered to have a limited frequency band [0, 8] kHz by cutting off the high frequency details for easier modeling. On a contrary, we train all models~(including the baselines) using a frequency range [0, 12] kHz and a 100-band log-mel spectrogram, which is also used in a recent study towards universal vocoding~\citep{jang2021univnet}. We set other STFT parameters as in previous work \citep{kong2020hifi}, with 1024 FFT size, 1024 Hann window, and 256 hop size.
 
 ### 4.2.Models
 
-We train all BigVGAN models including the ablation models and the baseline HiFi-GAN using our training configuration for 1M steps. We use the batch size of 32, a segment size of 8,192, and a initial learning rate of $1\times10^{-4}$. All other configurations including optimizer, learning rate scheduler, and scalar weights of the loss terms follow the official open-source implementation of HiFi-GAN \citep{kong2020hifi} without modification, with an exception that BigVGAN replaces MSD by MRD for the discriminator. All models are trained using NVIDIA DGX-1 with 8 V100 GPUs. Refer to Table \ref{hyperparams} in the Appendix \ref{appendix:arch_detail} for detailed hyperparameters.
-
-We include a comparison with SC-WaveRNN~\citep{paul2020speaker}, a state-of-the-art autoregressive universal neural vocoder based on WaveRNN~\citep{kalchbrenner2018efficient}, using the official implementation. We also include two popular flow-based models: WaveGlow~\citep{prenger2019waveglow} and WaveFlow~\citep{ping2019waveflow}, using their official implementation. 
-For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32~\citep{jang2021univnet}, \footnote{\url{https://github.com/mindslab-ai/univnet}. Note there is no official open-source code.}  which uses \texttt{train-clean-360} subset for training and is reported to outperform HiFi-GAN under the same training configurations. See appendix~\ref{appendix:more-ablations-ljspeech-vctk} for more details.}
-
-Table~\ref{tab:model_comparison} summarizes the synthesis speed of flow-based and GAN vocoders for generating 24 kHz audio. We omit SC-WaveRNN as it is much slower. 
-BigVGAN-base with 14M parameters can synthesize the audio 70.18$\times$ faster than real time, which is relatively slower than HiFi-GAN as the filtered \emph{Snake} function requires more computation.
-HiFi-GAN and BigVGAN are faster than flow-based models, because they are fully parallel (WaveFlow has partial autoregression) and have much fewer layers (WaveGlow has 96 layers).
-Our BigVGAN with 112M parameters can synthesize the audio 44.72~$\times$ faster than real-time and keeps the promise as a high-speed neural vocoder.
+> We train all BigVGAN models including the ablation models and the baseline HiFi-GAN using our training configuration for 1M steps. We use the batch size of 32, a segment size of 8,192, and a initial learning rate of $1\times10^{-4}$. All other configurations including optimizer, learning rate scheduler, and scalar weights of the loss terms follow the official open-source implementation of HiFi-GAN \citep{kong2020hifi} without modification, with an exception that BigVGAN replaces MSD by MRD for the discriminator. All models are trained using NVIDIA DGX-1 with 8 V100 GPUs. Refer to Table \ref{hyperparams} in the Appendix \ref{appendix:arch_detail} for detailed hyperparameters.
+>
+> We include a comparison with SC-WaveRNN~\citep{paul2020speaker}, a state-of-the-art autoregressive universal neural vocoder based on WaveRNN~\citep{kalchbrenner2018efficient}, using the official implementation. We also include two popular flow-based models: WaveGlow~\citep{prenger2019waveglow} and WaveFlow~\citep{ping2019waveflow}, using their official implementation. 
+> For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32~\citep{jang2021univnet}, \footnote{\url{https://github.com/mindslab-ai/univnet}. Note there is no official open-source code.}  which uses \texttt{train-clean-360} subset for training and is reported to outperform HiFi-GAN under the same training configurations. See appendix~\ref{appendix:more-ablations-ljspeech-vctk} for more details.
+>
+> Table~\ref{tab:model_comparison} summarizes the synthesis speed of flow-based and GAN vocoders for generating 24 kHz audio. We omit SC-WaveRNN as it is much slower. 
+> BigVGAN-base with 14M parameters can synthesize the audio 70.18$\times$ faster than real time, which is relatively slower than HiFi-GAN as the filtered \emph{Snake} function requires more computation.
+> HiFi-GAN and BigVGAN are faster than flow-based models, because they are fully parallel (WaveFlow has partial autoregression) and have much fewer layers (WaveGlow has 96 layers).
+> Our BigVGAN with 112M parameters can synthesize the audio 44.72~$\times$ faster than real-time and keeps the promise as a high-speed neural vocoder.
 
 ### 4.3.Evaluation Metrics
 
-The objective metrics we collected are designed to measure varied types of distance between the ground-truth audio and the generated sample. We provide 5 different metrics: 
-1)~Multi-resolution STFT (M-STFT)~\citep{yamamoto2020parallel} which measures the spectral distance across multiple resolutions.~\footnote{We used an open-source implementation from \texttt{Auraloss} \citep{steinmetz2020auraloss}.}
-2)~Perceptual evaluation of speech quality (PESQ)~\citep{rix2001perceptual}, a widely adopted automated assessment of voice quality.~\footnote{We used a 16,000Hz wide-band version from \url{https://github.com/ludlows/python-pesq}.}
-3)~Mel-cepstral distortion~(MCD)~\citep{kubichek1993mel} with dynamic time warping  which measures the difference between mel cepstra.~\footnote{We used an open-source implementation from \url{https://github.com/ttslr/python-MCD}.}
-4) Periodicity error, and 
-5) F1 score of voiced/unvoiced classification (V/UV F1) which are considered as major artifacts from non-autoregressive GAN vocoders~\citep{morrison2021chunked}.~\footnote{We used the periodicity error and V/UV F1 score code provided by CARGAN~\citep{morrison2021chunked}.}
-
-The conventional 5-scale mean opinion score (MOS) is insufficient for the subjective evaluation of universal vocoder, because the metric needs to differentiate the utterances from diverse speaker identities recorded in various environments. For example, the model may always output some very natural ``average'' voices, which is not preferred but can still be highly rated by human workers in MOS evaluation.
-As a result, we also perform the 5-scale similarity mean opinion score (SMOS) evaluation, where the participant is asked to give the score of similarity for the pair of audio after listening to ground-truth audio and the sample from the model side-by-side. SMOS provides an improved way of assessing how close the given sample is to the ground-truth, where the ground-truth recordings can have diverse speaker identities, contains unseen languages for the listeners, and be recorded in various acoustic environments. SMOS is also directly applicable to non-speech samples, e.g., music. 
-We did MOS and SMOS evaluation on Mechanical Turk. More details can be found in Appendix~\ref{appendix:AMT}.
+> The objective metrics we collected are designed to measure varied types of distance between the ground-truth audio and the generated sample. We provide 5 different metrics: 
+> 1. Multi-resolution STFT (M-STFT)~\citep{yamamoto2020parallel} which measures the spectral distance across multiple resolutions.~\footnote{We used an open-source implementation from \texttt{Auraloss} \citep{steinmetz2020auraloss}.}
+> 2. Perceptual evaluation of speech quality (PESQ)~\citep{rix2001perceptual}, a widely adopted automated assessment of voice quality.~\footnote{We used a 16,000Hz wide-band version from \url{https://github.com/ludlows/python-pesq}.}
+> 3. Mel-cepstral distortion~(MCD)~\citep{kubichek1993mel} with dynamic time warping  which measures the difference between mel cepstra.~\footnote{We used an open-source implementation from \url{https://github.com/ttslr/python-MCD}.}
+> 4. Periodicity error, and 
+> 5. F1 score of voiced/unvoiced classification (V/UV F1) which are considered as major artifacts from non-autoregressive GAN vocoders~\citep{morrison2021chunked}.~\footnote{We used the periodicity error and V/UV F1 score code provided by CARGAN~\citep{morrison2021chunked}.}
+>
+> The conventional 5-scale mean opinion score (MOS) is insufficient for the subjective evaluation of universal vocoder, because the metric needs to differentiate the utterances from diverse speaker identities recorded in various environments. For example, the model may always output some very natural ``average'' voices, which is not preferred but can still be highly rated by human workers in MOS evaluation.
+> As a result, we also perform the 5-scale similarity mean opinion score (SMOS) evaluation, where the participant is asked to give the score of similarity for the pair of audio after listening to ground-truth audio and the sample from the model side-by-side. SMOS provides an improved way of assessing how close the given sample is to the ground-truth, where the ground-truth recordings can have diverse speaker identities, contains unseen languages for the listeners, and be recorded in various acoustic environments. SMOS is also directly applicable to non-speech samples, e.g., music. 
+> We did MOS and SMOS evaluation on Mechanical Turk. More details can be found in Appendix~\ref{appendix:AMT}.
 
 ## 5.Results: 结果
 
 ### 5.1.LibriTTS Results
 
-We report the performance of BigVGAN and the baseline models evaluated on LibriTTS using above objective and subjective metrics.
-We perform objective evaluations on \texttt{dev-clean} and \texttt{dev-other} altogether, and conduct subjective evaluations on the combined \texttt{test-clean} and \texttt{test-other}. The \texttt{dev} and \texttt{test} splits of LibriTTS contains unseen speakers during training, but the recording environments are covered in the train split.
-
-Table \ref{tab:libritts-all} shows the in-distribution test results on LibriTTS. Baseline models other than HiFi-GAN performs significantly worse. This indicates that GAN vocoder is the state-of-the-art for universal neural vocoding. BigVGAN significantly improves all objective metrics. In particular, BigVGAN-base exhibits consistently improved objective scores over HiFi-GAN~(V1) with the same amount of paramters, suggesting that it has better periodic inductive bias for waveform data.
-
-HiFi-GAN (V1), BigVGAN-base, and BigVGAN perform comparably well in terms of MOS without listening to the ground-truth audio side-by-side. 
-When the listeners can compare the model sample with ground truth audio side-by-side, BigVGAN-base measurably outperforms HiFi-GAN (V1) in terms of SMOS ($+0.05$), and the 112M BigVGAN outperforms HiFi-GAN by a clear margin in terms of SMOS ($+0.11$) because it has high model capacity to further leverage the diverse training data for better quality.
-
-In Appendix~\ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet~\citep{jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK}~\citep{yamagishi2019cstr}, and \texttt{LJSpeech}~\citep{Ito2017ljspeech} data.
+> We report the performance of BigVGAN and the baseline models evaluated on LibriTTS using above objective and subjective metrics.
+> We perform objective evaluations on \texttt{dev-clean} and \texttt{dev-other} altogether, and conduct subjective evaluations on the combined \texttt{test-clean} and \texttt{test-other}. The \texttt{dev} and \texttt{test} splits of LibriTTS contains unseen speakers during training, but the recording environments are covered in the train split.
+>
+> Table \ref{tab:libritts-all} shows the in-distribution test results on LibriTTS. Baseline models other than HiFi-GAN performs significantly worse. This indicates that GAN vocoder is the state-of-the-art for universal neural vocoding. BigVGAN significantly improves all objective metrics. In particular, BigVGAN-base exhibits consistently improved objective scores over HiFi-GAN~(V1) with the same amount of paramters, suggesting that it has better periodic inductive bias for waveform data.
+>
+> HiFi-GAN (V1), BigVGAN-base, and BigVGAN perform comparably well in terms of MOS without listening to the ground-truth audio side-by-side. 
+> When the listeners can compare the model sample with ground truth audio side-by-side, BigVGAN-base measurably outperforms HiFi-GAN (V1) in terms of SMOS ($+0.05$), and the 112M BigVGAN outperforms HiFi-GAN by a clear margin in terms of SMOS ($+0.11$) because it has high model capacity to further leverage the diverse training data for better quality.
+>
+> In Appendix~\ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet~\citep{jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK}~\citep{yamagishi2019cstr}, and \texttt{LJSpeech}~\citep{Ito2017ljspeech} data.
 
 ### 5.2.Unseen Languages & Varied Recording Environments
 
-In this subsection, we assess the universal vocoding capability of BigVGAN by measuring its zero-shot performance for various unseen languages with varied types of the recording environments in the unseen dataset.
-Based on the results in Table \ref{tab:libritts-all}, we only include GAN-based vocoders as the state-of-the-art baseline.
-We gather three classes of a publicly available multi-language dataset categorized by the type of noise from the recording environment.
-
-- A collection of under-resourced languages recorded in a noiseless studio environment \citep{sodimana2018step}: Javanese, Khmer, Nepali, and Sundanese. We use randomly selected 50 audio clips with equal balance across languages from the combined dataset.
-\vspace{-.3em}
-- The Multilingual TEDx Corpus \citep{salesky2021multilingual}: contains a collection of TEDx talks in Spanish, French, Italian, and Portuguese. We use randomly selected 50 audio clips with equal balance across languages from the IWSLT'21 test set. We simulate the unseen recording environment setup by adding a random environmental noise from MS-SNSD \citep{reddy2019scalable}, such as airport, cafe, babble, etc.
-\vspace{-.3em}
-- Deeply Korean read speech corpus \citep{deeply_corpus_kor}: contains short speech audio clips in Korean, recorded in three types of recording environments (anechoic chamber, studio apartment, and dance studio) using a smartphone. 
-We use randomly selected 50 audio clips where 25 clips are from the studio apartment, and the remaining 25 clips are from the dance studio. The collected audio clips contain a significant amount of noise and artifacts from real-world recording environments, such as reverb, echo, and static background noise.
-
-Table \ref{tab:multi-language} summarizes the SMOS results from three different types of unseen dataset. We only did SMOS evaluations, because the datasets have unseen languages for human listeners and it is hard to determine the quality without side-by-side comparison with the ground-truth recordings. 
-For clean under-resourced language dataset, the performance gap between models is not substantially large. This indicates that the universal vocoder trained on the entire LibriTTS training set is robust to unseen languages under clean recording environments.
-For both types of unseen recording environment (simulated or real-world), BigVGAN outperforms the baseline models by a large margin. The small capacity BigVGAN-base also shows improvements compared to the baseline with statistical significance (p-value $<$ 0.05 from the Wilcoxon signed-rank test). This suggests that BigVGAN is significantly more robust to the unseen recording environments thanks to the improved generator design with the AMP module.
-In Appendix~\ref{appendix:asr}, we further demonstrate that BigVGAN is the most linguistically accurate universal vocoder in terms of character error rate (CER) on multiple languages.
-
-We test the open-source implementation of UnivNet~\citep{jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
-Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed HiFi-GAN \citep{kong2020hifi}, we find that the unmodified HiFi-GAN trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
-We also train UnivNet-c32 on LibriTTS \texttt{train-full} and find that it is not benefited from larger training data. See Appendix~\ref{appendix:more-ablations-ljspeech-vctk} for detailed analysis. 
+> In this subsection, we assess the universal vocoding capability of BigVGAN by measuring its zero-shot performance for various unseen languages with varied types of the recording environments in the unseen dataset.
+> Based on the results in Table \ref{tab:libritts-all}, we only include GAN-based vocoders as the state-of-the-art baseline.
+> We gather three classes of a publicly available multi-language dataset categorized by the type of noise from the recording environment.
+>
+> - A collection of under-resourced languages recorded in a noiseless studio environment \citep{sodimana2018step}: Javanese, Khmer, Nepali, and Sundanese. We use randomly selected 50 audio clips with equal balance across languages from the combined dataset.
+> - The Multilingual TEDx Corpus \citep{salesky2021multilingual}: contains a collection of TEDx talks in Spanish, French, Italian, and Portuguese. We use randomly selected 50 audio clips with equal balance across languages from the IWSLT'21 test set. We simulate the unseen recording environment setup by adding a random environmental noise from MS-SNSD \citep{reddy2019scalable}, such as airport, cafe, babble, etc.
+> - Deeply Korean read speech corpus \citep{deeply_corpus_kor}: contains short speech audio clips in Korean, recorded in three types of recording environments (anechoic chamber, studio apartment, and dance studio) using a smartphone. 
+> We use randomly selected 50 audio clips where 25 clips are from the studio apartment, and the remaining 25 clips are from the dance studio. The collected audio clips contain a significant amount of noise and artifacts from real-world recording environments, such as reverb, echo, and static background noise.
+>
+> Table \ref{tab:multi-language} summarizes the SMOS results from three different types of unseen dataset. We only did SMOS evaluations, because the datasets have unseen languages for human listeners and it is hard to determine the quality without side-by-side comparison with the ground-truth recordings. 
+> For clean under-resourced language dataset, the performance gap between models is not substantially large. This indicates that the universal vocoder trained on the entire LibriTTS training set is robust to unseen languages under clean recording environments.
+> For both types of unseen recording environment (simulated or real-world), BigVGAN outperforms the baseline models by a large margin. The small capacity BigVGAN-base also shows improvements compared to the baseline with statistical significance (p-value $<$ 0.05 from the Wilcoxon signed-rank test). This suggests that BigVGAN is significantly more robust to the unseen recording environments thanks to the improved generator design with the AMP module.
+> In Appendix~\ref{appendix:asr}, we further demonstrate that BigVGAN is the most linguistically accurate universal vocoder in terms of character error rate (CER) on multiple languages.
+>
+> We test the open-source implementation of UnivNet~\citep{jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
+> Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed HiFi-GAN \citep{kong2020hifi}, we find that the unmodified HiFi-GAN trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
+> We also train UnivNet-c32 on LibriTTS \texttt{train-full} and find that it is not benefited from larger training data. See Appendix~\ref{appendix:more-ablations-ljspeech-vctk} for detailed analysis. 
 
 ### 5.3.Out-of-Distribution Robustness
 
-In this subsection, we test BigVGAN's robustness and extrapolation capability by measuring zero-shot performance on out-of-distribution data. We conduct the SMOS experiment using MUSDB18-HQ~\citep{musdb18-hq}, a multi-track music audio dataset which contains vocal, drums, bass, other instruments, and the original mixture. The test set contains 50 songs with 5 tracks. We gather the mid-song clip with the duration of 10 seconds for each track and song.
-
-Table~\ref{tab:musdb-hq} shows the SMOS results from the 5 tracks and their average from the MUSDB18-HQ test set. BigVGAN models demonstrate a substantially improved zero-shot generation performance with wider frequency band coverage, whereas baseline models fail to generate audio outside the limited frequency range and suffer from severe distortion. The improvements are most profound for singing voice~(vocal), instrumental audio~(others) and the full mixture of the song~(mixture), whereas the improvements from drums and bass are less significant.
-
-We also experiment with audios obtained from YouTube videos from real-world recording environments. BigVGAN also exhibits robustness to various types of out-of-distribution signals such as laughter. We provide audio samples to our demo page.~\footnote{\small\url{https://bigvgan-demo.github.io}}
+> In this subsection, we test BigVGAN's robustness and extrapolation capability by measuring zero-shot performance on out-of-distribution data. We conduct the SMOS experiment using MUSDB18-HQ~\citep{musdb18-hq}, a multi-track music audio dataset which contains vocal, drums, bass, other instruments, and the original mixture. The test set contains 50 songs with 5 tracks. We gather the mid-song clip with the duration of 10 seconds for each track and song.
+>
+> Table~\ref{tab:musdb-hq} shows the SMOS results from the 5 tracks and their average from the MUSDB18-HQ test set. BigVGAN models demonstrate a substantially improved zero-shot generation performance with wider frequency band coverage, whereas baseline models fail to generate audio outside the limited frequency range and suffer from severe distortion. The improvements are most profound for singing voice~(vocal), instrumental audio~(others) and the full mixture of the song~(mixture), whereas the improvements from drums and bass are less significant.
+>
+> We also experiment with audios obtained from YouTube videos from real-world recording environments. BigVGAN also exhibits robustness to various types of out-of-distribution signals such as laughter. We provide audio samples to our demo page.~\footnote{\small\url{https://bigvgan-demo.github.io}}
 
 ### 5.4.Ablation Study
 
 #### Model architecture
-To measure the effectiveness of the BigVGAN generator, we include SMOS test for the ablation models of BigVGAN-base on MUSDB18-HQ data. Table~\ref{tab:musdb-hq} shows that the ablation models exhibit clear degradation on various  scenarios such as instrumental audio (others, mixture). From the average SMOS ratings, 1) disabling the anti-aliasing filter for \emph{Snake} activation performs worse than BigVGAN-base and 2) removing both the filter and \emph{Snake} activation (i.e., vanilla HiFi-GAN trained with MRD replacing MSD) is even worse than the \emph{Snake}-only ablation model, both with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). This indicates that Leaky ReLU is not robust enough to extrapolate beyond the learned frequency range and the aliasing artifacts degrade the audio quality in challenging setups. The results show that BigVGAN generator demonstrates strong robustness and extrapolation capability to out-of-distribution scenarios because of the seamless integration of periodic inductive bias and anti-aliased feature representation. See Appendix~\ref{appendix:visualization} for the visualization of anti-aliasing effect in BigVGAN.
+
+> To measure the effectiveness of the BigVGAN generator, we include SMOS test for the ablation models of BigVGAN-base on MUSDB18-HQ data. Table~\ref{tab:musdb-hq} shows that the ablation models exhibit clear degradation on various  scenarios such as instrumental audio (others, mixture). From the average SMOS ratings, 1) disabling the anti-aliasing filter for \emph{Snake} activation performs worse than BigVGAN-base and 2) removing both the filter and \emph{Snake} activation (i.e., vanilla HiFi-GAN trained with MRD replacing MSD) is even worse than the \emph{Snake}-only ablation model, both with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). This indicates that Leaky ReLU is not robust enough to extrapolate beyond the learned frequency range and the aliasing artifacts degrade the audio quality in challenging setups. The results show that BigVGAN generator demonstrates strong robustness and extrapolation capability to out-of-distribution scenarios because of the seamless integration of periodic inductive bias and anti-aliased feature representation. See Appendix~\ref{appendix:visualization} for the visualization of anti-aliasing effect in BigVGAN.
 
 #### Big model
 
-We compare HiFi-GAN and BigVGAN both with the largest 112M parameters. We train the 112M HiFi-GAN with the same training setting as BigVGAN. We conduct a pairwise test between the two models on the \texttt{mixture} test set of MUSDB18-HQ which is challenging out-of-distribution data. We ask the participants to select a better sounding audio between the samples from the two models. The test shows that 58 $\%$ of the ratings voted to BigVGAN over the large HiFi-GAN and the quality of BigVGAN is greater than the large HiFi-GAN with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). The results further validate the architectural advantage of BigVGAN in large-scale setting. 
+> We compare HiFi-GAN and BigVGAN both with the largest 112M parameters. We train the 112M HiFi-GAN with the same training setting as BigVGAN. We conduct a pairwise test between the two models on the \texttt{mixture} test set of MUSDB18-HQ which is challenging out-of-distribution data. We ask the participants to select a better sounding audio between the samples from the two models. The test shows that 58 $\%$ of the ratings voted to BigVGAN over the large HiFi-GAN and the quality of BigVGAN is greater than the large HiFi-GAN with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test). The results further validate the architectural advantage of BigVGAN in large-scale setting. 
 
 #### Large Training data
 
-To verify the importance of using large-scale training data, we trained our BigVGAN using less diverse, clean speech-only dataset with the same training configuration for 1M steps: 1) \texttt{train-clean-360} subset of LibriTTS, or 2) VCTK dataset. Table~\ref{tab:data-ablation} shows that training BigVGAN on less diverse data shows degradation in both objective metrics and the subjective SMOS on the LibriTTS evaluation sets. The result verifies the importance of using diverse training data and demonstrates the effectiveness of BigVGAN on large-scale datasets.
+> To verify the importance of using large-scale training data, we trained our BigVGAN using less diverse, clean speech-only dataset with the same training configuration for 1M steps: 1) \texttt{train-clean-360} subset of LibriTTS, or 2) VCTK dataset. Table~\ref{tab:data-ablation} shows that training BigVGAN on less diverse data shows degradation in both objective metrics and the subjective SMOS on the LibriTTS evaluation sets. The result verifies the importance of using diverse training data and demonstrates the effectiveness of BigVGAN on large-scale datasets.
 
 ## 6.Conclusions: 结论
 
