--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -17,18 +17,18 @@
   - 预印时间: 2023.02.16 ArXiv v2
   - 更新笔记: 2024.08.02
 - 发表:
-  - 期刊/会议 
+  - [ICLR 2023](../../Publications/ICLR.md) 
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2206.04658)
-  - [DOI]()
-  - [Github]()
+  - [DOI](https://openreview.net/forum?id=iTtGCMDEzS_)
+  - [Github](https://github.com/NVIDIA/BigVGAN)
   - [Demo](https://bigvgan-demo.github.io/)
-  - [Scholar](https://scholar.google.com/scholar?cluster=)
+  - [Scholar](https://scholar.google.com/scholar?cluster=14265847301322679424)
 - 标签:
-  - ?
+  - [开源](../../Tags/OpenSource.md)
 - 页数: ?
 - 引用: ?
-- 被引: ?
+- 被引: 133
 - 数据:
   - ? 
 - 对比:
@@ -40,41 +40,56 @@
 
 ## Abstract: 摘要
 
-> Despite recent progress in generative adversarial network~(GAN)-based vocoders, where the model generates raw waveform conditioned on acoustic features, it is challenging to synthesize high-fidelity audio for numerous speakers across various recording environments. 
+<details>
+<summary>原文</summary>
+
+> Despite recent progress in Generative Adversarial Network (GAN)-based vocoders, where the model generates raw waveform conditioned on acoustic features, it is challenging to synthesize high-fidelity audio for numerous speakers across various recording environments. 
 > In this work, we present ***BigVGAN***, a universal vocoder that generalizes well for various out-of-distribution scenarios without fine-tuning.
 > We introduce periodic activation function and anti-aliased representation into the GAN generator, which brings the desired inductive bias for audio synthesis and significantly improves audio quality.
 > In addition, we train our GAN vocoder at the largest scale up to 112M parameters, which is unprecedented in the literature.
 > We identify and address the failure modes in large-scale GAN training for audio, while maintaining high-fidelity output without over-regularization. 
-> Our ***BigVGAN***, trained only on clean speech~(LibriTTS), achieves the state-of-the-art performance for various zero-shot~(out-of-distribution) conditions, including unseen speakers, languages, recording environments, singing voices, music, and instrumental audio.
+> Our ***BigVGAN***, trained only on clean speech (LibriTTS), achieves the state-of-the-art performance for various zero-shot (out-of-distribution) conditions, including unseen speakers, languages, recording environments, singing voices, music, and instrumental audio.
 > Listen to audio samples from ***BigVGAN*** at: https://bigvgan-demo.github.io/. 
 > We release our code and model at: https://github.com/NVIDIA/BigVGAN.
+
+</details>
+<br>
+
+尽管基于生成对抗网络的声码器在近年来取得了进展, 它们能够以声学特征为条件生成原始波形, 但要为各种不同录音环境下的说话人合成高保真音频仍具有挑战性.
+本项工作中提出了 ***BigVGAN***, 一个通用声码器, 无需微调就能够很好地适应各种分布外场景.
+我们向 GAN 生成器中引入了周期激活函数和抗混叠表示, 为音频合成带来了所需的归纳偏置, 并显著提高了音频质量.
+此外, 我们将 GAN 声码器训练到文献中前所未有的最大规模, 参数数量高达 112 M.
+我们识别并解决了音频领域的大规模 GAN 训练的失败模式, 同时保持了高保真输出, 而无需过度正则化.
+我们的 BigVGAN, 仅在纯净的语音上训练 (LibriTTS), 取得了在各种零样本 (分布外) 条件的最佳性能, 如未见过的说话人, 语言, 录音环境, 歌声, 音乐和乐器音频.
+你可以在 https://bigvgan-demo.github.io/ 听到 BigVGAN 的音频示例.
+我们在 https://github.com/NVIDIA/BigVGAN 上发布了代码和模型.
 
 ## 1.Introduction: 引言
 
 > Deep generative models have demonstrated noticeable successes for modeling raw audio.
-> The successful methods include, autoregressive models~\citep{oord2016wavenet, mehri2016samplernn, kalchbrenner2018efficient}, flow-based models~\citep{oord2017parallel,ping2018clarinet, prenger2019waveglow, kim2018flowavenet, ping2019waveflow, lee2020nanoflow}, GAN-based models~\citep{donahue2018adversarial, kumar2019melgan,binkowski2020high, yamamoto2020parallel, [HiFi-GAN](2020.10.12_HiFi-GAN.md)}, and diffusion models~\citep{kong2020diffwave, chen2020wavegrad, lee2022priorgrad}.
+> The successful methods include, autoregressive models {oord2016wavenet, mehri2016samplernn, kalchbrenner2018efficient}, flow-based models {oord2017parallel,ping2018clarinet, prenger2019waveglow, kim2018flowavenet, ping2019waveflow, lee2020nanoflow}, GAN-based models {donahue2018adversarial, kumar2019melgan,binkowski2020high, yamamoto2020parallel, [HiFi-GAN](2020.10.12_HiFi-GAN.md)}, and diffusion models {kong2020diffwave, chen2020wavegrad, lee2022priorgrad}.
 >
 > Among these methods, GAN-based vocoders (e.g. [HiFi-GAN](2020.10.12_HiFi-GAN.md)) can generate high-fidelity raw audio conditioned on mel spectrogram, while synthesizing hundreds of times faster than real-time on a single GPU. 
 > However, existing GAN vocoders are confined to the settings with a moderate number of voices recorded in clean environment due to the limited model capacity.
 > The audio quality can heavily degrade when the models are conditioned on mel spectrogram from unseen speakers in different recording environments. 
-> In practice, a \emph{universal vocoder}, that can do zero-shot generation for out-of-distribution samples, is very valuable in many real-world applications, including text-to-speech with numerous speakers~\citep{ping2017deep}, neural voice cloning~\citep{arik2018neural, jia2018transfer}, voice conversion~\citep{liu2018wavenet}, speech-to-speech translation~\citep{jia2019direct}, and neural audio codec~\citep{zeghidour2021soundstream}.
+> In practice, a \emph{universal vocoder}, that can do zero-shot generation for out-of-distribution samples, is very valuable in many real-world applications, including text-to-speech with numerous speakers {ping2017deep}, neural voice cloning {arik2018neural, jia2018transfer}, voice conversion {liu2018wavenet}, speech-to-speech translation {jia2019direct}, and neural audio codec {zeghidour2021soundstream}.
 > In these applications, the neural vocoder also needs to generalize well for audio recorded at various conditions.
 >
-> Scaling up the model size for zero-shot performance is a noticeable trend in text generation~\citep[e.g.,][]{brown2020language} and image synthesis~\citep[e.g.,][]{ramesh2021zero}, but has not been explored in audio synthesis.
+> Scaling up the model size for zero-shot performance is a noticeable trend in text generation [e.g.,][]{brown2020language} and image synthesis [e.g.,][]{ramesh2021zero}, but has not been explored in audio synthesis.
 > Although likelihood-based models are found to be easier for scaling among others because of their simple training objective and stable optimization, we build our universal vocoder with large-scale GAN training, because GAN vocoder has the following advantages:
 > 1. In contrast to autoregressive or diffusion models, it is fully parallel and requires only one forward pass to generate high-dimensional waveform.
-> 2. In contrast to flow-based models~\citep{prenger2019waveglow}, it does not enforce any architectural constraints~(e.g., affine coupling layer) that maintain the bijection between latent and data. 
-> Such architectural constraints can limit model capacity given the same number of parameters~\citep{ping2019waveflow}.
+> 2. In contrast to flow-based models {prenger2019waveglow}, it does not enforce any architectural constraints~(e.g., affine coupling layer) that maintain the bijection between latent and data. 
+> Such architectural constraints can limit model capacity given the same number of parameters {ping2019waveflow}.
 >
 > In this work, we present ***BigVGAN***, a **Big** **V**ocoding **GAN** that enables high-fidelity out-of-distribution~(OOD) generation without fine-tuning. 
 > Specifically, we make the following contributions:
 > - We introduce periodic activations into the generator, which provide the desired inductive bias for audio synthesis. 
-> Inspired by the methods proposed for other domains~\citep{liu2020neural, sitzmann2020implicit}, we demonstrate the noticeable success of periodic activations in audio synthesis.
+> Inspired by the methods proposed for other domains {liu2020neural, sitzmann2020implicit}, we demonstrate the noticeable success of periodic activations in audio synthesis.
 > - We propose anti-aliased multi-periodicity composition~(AMP) module for modeling complex audio waveform.
 > AMP composes multiple signal components with learnable periodicities and uses low-pass filter to reduce the high-frequency artifacts.
 > - We successfully scale ***BigVGAN*** up to 112M parameters by fixing the failure modes of large-scale GAN training without regularizing both generator and discriminator.
 > The empirical insights are different from \citet{brock2018large} in image domain.
-> For example, regularization methods~\citep[e.g.,][]{miyato2018spectral} introduce phase mismatch artifacts in audio synthesis. 
+> For example, regularization methods [e.g.,][]{miyato2018spectral} introduce phase mismatch artifacts in audio synthesis. 
 > - We demonstrate that ***BigVGAN***-base with 14M parameters outperforms the state-of-the-art neural vocoders with comparable size for both in-distribution and out-of-distribution samples.
 > In particular, ***BigVGAN*** with 112M parameters outperforms the state-of-the-art models by a large margin for zero-shot generation at various OOD scenarios, including unseen speakers, novel languages, singing voices, music and instrumental audio in varied unseen recording environments. % It synthesizes 24 kHz high-fidelity speech 44.72~$\times$ faster than real-time on a V100 GPU.
 >
@@ -86,29 +101,29 @@
 
 > Our work builds upon the state-of-the-art of GANs for image and audio synthesis. 
 >
-> GAN was first proposed for image synthesis~\citep{goodfellow2014generative}.
-> Since then, impressive results have been obtained through optimized architectures~\citep[e.g.,][]{radford2015unsupervised, karras2021alias} or large scale training~\citep[e.g.,][]{brock2018large}.
+> GAN was first proposed for image synthesis {goodfellow2014generative}.
+> Since then, impressive results have been obtained through optimized architectures [e.g.,][]{radford2015unsupervised, karras2021alias} or large scale training [e.g.,][]{brock2018large}.
 >
 > In audio synthesis, previous works focus on improving the discriminator architectures or adding new auxiliary training losses.
-> MelGAN~\citep{kumar2019melgan} introduces the multi-scale discriminator~(MSD) that uses average pooling to downsample the raw waveform at multiple scales and applies window-based discriminators at each scale separately.
+> MelGAN {kumar2019melgan} introduces the multi-scale discriminator~(MSD) that uses average pooling to downsample the raw waveform at multiple scales and applies window-based discriminators at each scale separately.
 > It also enforces the mapping between input mel spectrogram and generated waveform via an $\ell_1$ feature matching loss from discriminator.
-> In contrast, GAN-TTS~\citep{binkowski2020high} uses an ensemble of discriminators which operate on random windows of different sizes, and enforces the mapping between the conditioner and waveform adversarially using conditional discriminators.
-> Parallel WaveGAN~\citep{yamamoto2020parallel} extends the single short-time Fourier transform (STFT) loss~\citep{ping2018clarinet} to multi-resolution, and adds it as an auxiliary loss for GAN training.
+> In contrast, GAN-TTS {binkowski2020high} uses an ensemble of discriminators which operate on random windows of different sizes, and enforces the mapping between the conditioner and waveform adversarially using conditional discriminators.
+> Parallel WaveGAN {yamamoto2020parallel} extends the single short-time Fourier transform (STFT) loss {ping2018clarinet} to multi-resolution, and adds it as an auxiliary loss for GAN training.
 > \cite{yang2021multi} and \cite{mustafa2021stylemelgan} further improve MelGAN by incorporating the multi-resolution STFT loss.
 >
 > [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) reuses the MSD from MelGAN, and introduces the multi-period discriminator~(MPD) for high-fidelity synthesis. 
-> UnivNet~\citep{jang2020universal, jang2021univnet} uses the multi-resolution discriminator~(MRD) that takes the multi-resolution spectrograms as the input and can sharpen the spectral structure of synthesized waveform.
-> In contrast, CARGAN~\citep{morrison2021chunked} incorporates the partial autoregression~\citep{ping2019waveflow} into generator to improve the pitch and periodicity accuracy.
+> UnivNet {jang2020universal, jang2021univnet} uses the multi-resolution discriminator~(MRD) that takes the multi-resolution spectrograms as the input and can sharpen the spectral structure of synthesized waveform.
+> In contrast, CARGAN {morrison2021chunked} incorporates the partial autoregression {ping2019waveflow} into generator to improve the pitch and periodicity accuracy.
 >
 > In this work, we focus on improving and scaling up the generator.
 > We introduce the periodic inductive bias for audio synthesis and address the feature aliasing issues within the non-autoregressive generator architecture.
-> Our architectural design has a connection with the latest results in time-series prediction~\citep{liu2020neural}, {implicit neural representations~\citep{sitzmann2020implicit}}, and image synthesis~\citep{karras2021alias}.
+> Our architectural design has a connection with the latest results in time-series prediction {liu2020neural}, {implicit neural representations {sitzmann2020implicit}}, and image synthesis {karras2021alias}.
 > Note that, \citet{you2021gan} argues that different generator architectures can perform equally well for single-speaker neural vocoding.
 > We demonstrate that improving generator architecture is crucial for universal neural vocoding in challenging conditions.
 >
 > There are limited successes for universal neural vocoding due to the noticeable challenges.
-> In previous work, WaveRNN has been applied for universal vocoding task~\citep{lorenzo2018towards, paul2020speaker}. \citet{jiao2021universal} builds the universal vocoder with flow-based model.
-> GAN vocoder is found to be a good candidate recently~\citep{jang2021univnet}.
+> In previous work, WaveRNN has been applied for universal vocoding task {lorenzo2018towards, paul2020speaker}. \citet{jiao2021universal} builds the universal vocoder with flow-based model.
+> GAN vocoder is found to be a good candidate recently {jang2021univnet}.
 
 ## 3.Methodology: 方法
 
@@ -120,7 +135,7 @@
 ### Generator
 
 > The generator network takes mel spectrogram or other features as input and output the corresponding raw waveform. 
-> In previous studies, several generator architectures have been applied, including WaveNet~\citep[e.g.,][]{yamamoto2020parallel}, or convolutional network that gradually upsamples the mel spectrogram to high-resolution waveform with a stack of residual blocks e.g.,{kumar2019melgan, [HiFi-GAN](2020.10.12_HiFi-GAN.md)}.
+> In previous studies, several generator architectures have been applied, including WaveNet [e.g.,][]{yamamoto2020parallel}, or convolutional network that gradually upsamples the mel spectrogram to high-resolution waveform with a stack of residual blocks e.g.,{kumar2019melgan, [HiFi-GAN](2020.10.12_HiFi-GAN.md)}.
 > We choose the HiFi-GAN generator as the baseline architecture. We believe the proposed techniques are applicable to other generator architectures as well.
 
 ### Discriminator
@@ -129,7 +144,7 @@
 > Importantly, each discriminator contains multiple sub-discriminators operating on different resolution windows of the waveform. 
 > For example, [HiFi-GAN](2020.10.12_HiFi-GAN.md) applies two types of discriminators: 
 > \emph{i}) the multi-period discriminator (MPD), where the 1-D signal is reshaped to 2-D representations with varied heights and widths to separately capture the multiple periodic structures though 2-D convolutions. 
-> \emph{ii}) The multi-scale discriminator (MSD)~\citep{kumar2019melgan}, where each sub-discriminator receives down-sampled 1-D signals at different frequency by average pooling in the time domain.
+> \emph{ii}) The multi-scale discriminator (MSD) {kumar2019melgan}, where each sub-discriminator receives down-sampled 1-D signals at different frequency by average pooling in the time domain.
 >
 > \citet{jang2020universal, jang2021univnet} propose to apply the discriminator on the time–frequency domain using the multi-resolution discriminator (MRD), which is composed of several sub-discriminators that operate on multiple 2-D linear spectrograms with different STFT resolutions. 
 > We also find that replacing MSD with MRD  improves audio quality with reduced pitch and periodicity artifacts.
@@ -147,7 +162,7 @@
 > Their activation functions~(e.g., {Leaky ReLU}) can produce new details with necessary nonlinearities, but do not provide any periodic inductive bias.
 > Furthermore, we identified that Leaky ReLU behaves poorly for \textit{extrapolation} in waveform domain: although the model can generate high-quality speech signal in a seen recording environment at training, the performance degrades significantly for out-of-distribution scenarios such as unseen recording environments, non-speech vocalizations, and instrumental audio.
 >
-> We introduce a proper inductive bias of periodicity to the generator by applying a recently proposed periodic activation called Snake function~\citep{liu2020neural}, defined as $f_{\alpha}(x) = x + \frac{1}{\alpha} \sin^2(\alpha x)$, where $\alpha$ is a trainable parameter that controls the frequency of the periodic component of the signal and larger $\alpha$ gives higher frequency.
+> We introduce a proper inductive bias of periodicity to the generator by applying a recently proposed periodic activation called Snake function {liu2020neural}, defined as $f_{\alpha}(x) = x + \frac{1}{\alpha} \sin^2(\alpha x)$, where $\alpha$ is a trainable parameter that controls the frequency of the periodic component of the signal and larger $\alpha$ gives higher frequency.
 > The use of $\sin^2(x)$ ensures monotonicity and renders it amenable to easy optimization. 
 > \citet{liu2020neural} demonstrates this periodic activation exhibits an improved extrapolation capability for temperature and financial data prediction.
 >
@@ -161,8 +176,8 @@
 > The Snake activations provide the required periodic inductive bias for modeling raw waveform, but it can produce arbitrary high frequency details for continuous-time signals that can not be represented by the discrete-time output of the network, which can lead to aliasing artifacts. 
 > (One can think of the neural vocoder as a discrete-time function on the sampled continuous-time signals.)
 > 
-> This side effect can be suppressed by applying a low-pass filter~\citep[e.g.,][]{karras2021alias}.
-> The anti-aliased nonlinearity operates by upsampling the signal $2\times$ along time dimension, applying the Snake activation, then downsampling the signal by $2\times$, which is a common practice inspired by the Nyquist-Shannon sampling theorem~\citep{shannon1949communication}.
+> This side effect can be suppressed by applying a low-pass filter [e.g.,][]{karras2021alias}.
+> The anti-aliased nonlinearity operates by upsampling the signal $2\times$ along time dimension, applying the Snake activation, then downsampling the signal by $2\times$, which is a common practice inspired by the Nyquist-Shannon sampling theorem {shannon1949communication}.
 > Each upsampling and downsampling operation is accompanied by the low-pass filter using a windowed \texttt{sinc} filter with a Kaiser window \citep{dsp}.
 > Refer to the Appendix \ref{appendix:arch_detail} for details.
 >
@@ -190,9 +205,9 @@
 >
 > We found that the default learning rate of $2\times10^{-4}$ used in HiFi-GAN causes an early training collapse for ***BigVGAN*** training, where the losses from the discriminator submodules immediately converge to zero after several thousands of iterations.
 > Halving the learning rate to $1\times10^{-4}$ was able to reduce such failures. 
-> We also found that large batch size is helpful to reduce mode collapse at training~\citep{brock2018large}.
+> We also found that large batch size is helpful to reduce mode collapse at training {brock2018large}.
 > We only double the batch size from the usual 16 to 32 for a good trade-off between training efficiency and stability, as neural vocoders can require millions of steps to converge.
-> Note that this recommended batch size is still much smaller than the one for image synthesis~(e.g., 2048)~\citep{brock2018large}, because neural vocoding has strong conditional information.
+> Note that this recommended batch size is still much smaller than the one for image synthesis~(e.g., 2048) {brock2018large}, because neural vocoding has strong conditional information.
 >
 > Even with the aforementioned changes, the large ***BigVGAN*** can still be prone to collapse early in training.
 > We track the gradient norm of each modules during training and identify that the anti-aliased nonlinearity significantly amplified the gradient norm of MPD.
@@ -202,7 +217,7 @@
 > This gradient clipping prevents the early training collapse of the generator.
 > Note that, gradient clipping was found ineffective to alleviate training instability for image synthesis~(see Appendix H in \citet{brock2018large}), but it is very effective in our endeavors.
 >
-> In addition to above efforts, we have explored other directions, including various ways to improve the model architecture, spectral normalization~\citep{miyato2018spectral} to stabilize GAN training, which is crucial for large-scale GAN training in image domain, and data augmentation to improve model generalization.
+> In addition to above efforts, we have explored other directions, including various ways to improve the model architecture, spectral normalization {miyato2018spectral} to stabilize GAN training, which is crucial for large-scale GAN training in image domain, and data augmentation to improve model generalization.
 > Unfortunately, all these trials resulted in worse perceptual quality in our study.
 > The details can be found in the Appendix~\ref{appendix:practical}.
 > We hope these practical lessons that we have learned would be useful to future research endeavors.
@@ -222,7 +237,7 @@
 > For OOD experiments, we resample the audio to 24 kHz if necessary using \texttt{kaiser-best} algorithm provided by \texttt{librosa} package.
 >
 > Conventional STFT parameters are engineered to have a limited frequency band [0, 8] kHz by cutting off the high frequency details for easier modeling.
-> On a contrary, we train all models~(including the baselines) using a frequency range [0, 12] kHz and a 100-band log-mel spectrogram, which is also used in a recent study towards universal vocoding~\citep{jang2021univnet}.
+> On a contrary, we train all models~(including the baselines) using a frequency range [0, 12] kHz and a 100-band log-mel spectrogram, which is also used in a recent study towards universal vocoding {jang2021univnet}.
 > We set other STFT parameters as in previous work ([HiFi-GAN](2020.10.12_HiFi-GAN.md)), with 1024 FFT size, 1024 Hann window, and 256 hop size.
 
 ### 4.2.Models
@@ -233,9 +248,9 @@
 > All models are trained using NVIDIA DGX-1 with 8 V100 GPUs.
 > Refer to Table \ref{hyperparams} in the Appendix \ref{appendix:arch_detail} for detailed hyperparameters.
 >
-> We include a comparison with SC-WaveRNN~\citep{paul2020speaker}, a state-of-the-art autoregressive universal neural vocoder based on WaveRNN~\citep{kalchbrenner2018efficient}, using the official implementation.
-> We also include two popular flow-based models: WaveGlow~\citep{prenger2019waveglow} and WaveFlow~\citep{ping2019waveflow}, using their official implementation. 
-> For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32~\citep{jang2021univnet}, (https://github.com/mindslab-ai/univnet. Note there is no official open-source code.)  which uses \texttt{train-clean-360} subset for training and is reported to outperform HiFi-GAN under the same training configurations.
+> We include a comparison with SC-WaveRNN {paul2020speaker}, a state-of-the-art autoregressive universal neural vocoder based on WaveRNN {kalchbrenner2018efficient}, using the official implementation.
+> We also include two popular flow-based models: WaveGlow {prenger2019waveglow} and WaveFlow {ping2019waveflow}, using their official implementation. 
+> For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32 {jang2021univnet}, (https://github.com/mindslab-ai/univnet. Note there is no official open-source code.)  which uses \texttt{train-clean-360} subset for training and is reported to outperform HiFi-GAN under the same training configurations.
 > See appendix~\ref{appendix:more-ablations-ljspeech-vctk} for more details.
 >
 > Table~\ref{tab:model_comparison} summarizes the synthesis speed of flow-based and GAN vocoders for generating 24 kHz audio.
@@ -248,15 +263,15 @@
 
 > The objective metrics we collected are designed to measure varied types of distance between the ground-truth audio and the generated sample.
 > We provide 5 different metrics: 
-> 1. Multi-resolution STFT (M-STFT)~\citep{yamamoto2020parallel} which measures the spectral distance across multiple resolutions.
+> 1. Multi-resolution STFT (M-STFT) {yamamoto2020parallel} which measures the spectral distance across multiple resolutions.
 > (We used an open-source implementation from \texttt{Auraloss} \citep{steinmetz2020auraloss}.)
-> 2. Perceptual evaluation of speech quality (PESQ)~\citep{rix2001perceptual}, a widely adopted automated assessment of voice quality.
+> 2. Perceptual evaluation of speech quality (PESQ) {rix2001perceptual}, a widely adopted automated assessment of voice quality.
 > (We used a 16,000Hz wide-band version from \url{https://github.com/ludlows/python-pesq}.)
-> 3. Mel-cepstral distortion~(MCD)~\citep{kubichek1993mel} with dynamic time warping  which measures the difference between mel cepstra.
+> 3. Mel-cepstral distortion~(MCD) {kubichek1993mel} with dynamic time warping  which measures the difference between mel cepstra.
 > (We used an open-source implementation from \url{https://github.com/ttslr/python-MCD}.)
 > 4. Periodicity error, and 
-> 5. F1 score of voiced/unvoiced classification (V/UV F1) which are considered as major artifacts from non-autoregressive GAN vocoders~\citep{morrison2021chunked}.
-> (We used the periodicity error and V/UV F1 score code provided by CARGAN~\citep{morrison2021chunked}.)
+> 5. F1 score of voiced/unvoiced classification (V/UV F1) which are considered as major artifacts from non-autoregressive GAN vocoders {morrison2021chunked}.
+> (We used the periodicity error and V/UV F1 score code provided by CARGAN {morrison2021chunked}.)
 >
 > The conventional 5-scale mean opinion score (MOS) is insufficient for the subjective evaluation of universal vocoder, because the metric needs to differentiate the utterances from diverse speaker identities recorded in various environments.
 > For example, the model may always output some very natural ``average'' voices, which is not preferred but can still be highly rated by human workers in MOS evaluation.
@@ -283,7 +298,7 @@
 > HiFi-GAN (V1), BigVGAN-base, and BigVGAN perform comparably well in terms of MOS without listening to the ground-truth audio side-by-side. 
 > When the listeners can compare the model sample with ground truth audio side-by-side, BigVGAN-base measurably outperforms HiFi-GAN (V1) in terms of SMOS ($+0.05$), and the 112M BigVGAN outperforms HiFi-GAN by a clear margin in terms of SMOS ($+0.11$) because it has high model capacity to further leverage the diverse training data for better quality.
 >
-> In Appendix~\ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet~\citep{jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK}~\citep{yamagishi2019cstr}, and \texttt{LJSpeech}~\citep{Ito2017ljspeech} data.
+> In Appendix~\ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet {jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK} {yamagishi2019cstr}, and \texttt{LJSpeech} {Ito2017ljspeech} data.
 
 ### 5.2.Unseen Languages & Varied Recording Environments
 
@@ -309,7 +324,7 @@
 > This suggests that BigVGAN is significantly more robust to the unseen recording environments thanks to the improved generator design with the AMP module.
 > In Appendix~\ref{appendix:asr}, we further demonstrate that BigVGAN is the most linguistically accurate universal vocoder in terms of character error rate (CER) on multiple languages.
 >
-> We test the open-source implementation of UnivNet~\citep{jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
+> We test the open-source implementation of UnivNet {jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
 > Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed [HiFi-GAN](2020.10.12_HiFi-GAN.md), we find that the unmodified HiFi-GAN trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
 > We also train UnivNet-c32 on LibriTTS \texttt{train-full} and find that it is not benefited from larger training data.
 > See Appendix~\ref{appendix:more-ablations-ljspeech-vctk} for detailed analysis. 
@@ -317,7 +332,7 @@
 ### 5.3.Out-of-Distribution Robustness
 
 > In this subsection, we test BigVGAN's robustness and extrapolation capability by measuring zero-shot performance on out-of-distribution data.
-> We conduct the SMOS experiment using MUSDB18-HQ~\citep{musdb18-hq}, a multi-track music audio dataset which contains vocal, drums, bass, other instruments, and the original mixture.
+> We conduct the SMOS experiment using MUSDB18-HQ {musdb18-hq}, a multi-track music audio dataset which contains vocal, drums, bass, other instruments, and the original mixture.
 > The test set contains 50 songs with 5 tracks.
 > We gather the mid-song clip with the duration of 10 seconds for each track and song.
 >
